; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_speakup_audptr.c_synth_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_speakup_audptr.c_synth_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spk_synth = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spk_synth*)* @synth_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @synth_probe(%struct.spk_synth* %0) #0 {
  %2 = alloca %struct.spk_synth*, align 8
  %3 = alloca i32, align 4
  store %struct.spk_synth* %0, %struct.spk_synth** %2, align 8
  %4 = load %struct.spk_synth*, %struct.spk_synth** %2, align 8
  %5 = call i32 @spk_ttyio_synth_probe(%struct.spk_synth* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.spk_synth*, %struct.spk_synth** %2, align 8
  %10 = call i32 @synth_version(%struct.spk_synth* %9)
  br label %11

11:                                               ; preds = %8, %1
  %12 = load i32, i32* %3, align 4
  %13 = icmp ne i32 %12, 0
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = load %struct.spk_synth*, %struct.spk_synth** %2, align 8
  %17 = getelementptr inbounds %struct.spk_synth, %struct.spk_synth* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  ret i32 0
}

declare dso_local i32 @spk_ttyio_synth_probe(%struct.spk_synth*) #1

declare dso_local i32 @synth_version(%struct.spk_synth*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
